src/test/deca/syntax/valid/parser/oracle/inequality_expr_third_deriv.deca
{
  -"Moon !" >= 5.0 >= 5 >= (--10.0); 5.89 >= --50 >= 2 >= "Hello World !";
}
