src/test/deca/syntax/invalid/parser/oracle/gr_expr_with_wrong_left_member.deca
{
   println("Hello World") > 50;
}